Fixed overflow

--- a/frontend/src/components/SignUp/SignUp.css
+++ b/frontend/src/components/SignUp/SignUp.css
@@ -10,19 +10,6 @@
     color: black;
     height: 100%;
     background: linear-gradient(180deg, #5e5efb 0%, #21c4d0 100%);
-    animation: gradient 15s ease infinite;
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
 }
 
 .auth-sidebar-logo{
@@ -40,14 +27,12 @@
     width: 90%;
     object-fit: cover;
     height: 90%;
-    overflow: clip;
-
+    overflow: hidden;
 }
 
 .auth-sidebar-credit{
     display:block;
     position: absolute;
-    bottom: 40px;
     left: 40px;
     text-decoration: unset;
     font-family: "Mona Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -58,6 +43,7 @@
 }
 
 .main-content{
+    position: relative;
     display: flex;
     flex-grow: 1;
     justify-content: center;
@@ -65,9 +51,8 @@
     padding: 0;
     align-items: center;
     box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    margin-left: 20%;
+    width: 65%;
+    margin-left: 35%;
 }
 
 .about{
@@ -76,7 +61,6 @@
     margin-left: 5%;
     font-size: 4.4117647058824rem;
     font-family: 'Rubik', sans-serif;
-    color: var(--ast-global-color-2);
 }
 
 .h2{
@@ -86,18 +70,12 @@
 }
 
 @media (min-width: 1024px){
-    .SignUp{
-        overflow:hidden;
-    }
-    
     main {
         display: flex;
-        flex-grow: 1;
         align-items: center;
         justify-content: center;
         margin: 0;
         padding: 0;
-        height: 100%;
     }
     .auth-content {
         padding-top: 200px;
@@ -140,20 +118,16 @@
 }
 
 main {
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    margin: 0 auto;
-    padding: 0 20px;
 }
 
 @media (min-width: 400px){
     div.form-field-group {
-        display: -ms-flexbox;
         display: flex;
-        -ms-flex-pack: justify;
         justify-content: space-between;
+        overflow: hidden;
     }
 }
 
@@ -166,7 +140,7 @@ div.form-field-group .form-field {
 }
 
 form.with-messages div.form-field {
-    position: relative;
+    position: relative; 
 }
 
 input.text-input {
@@ -177,22 +151,15 @@ input.text-input {
     font-size: 16px;
     font-weight: 400;
     line-height: 28px;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     height: 56px;
     padding: 18px 20px;
-    -webkit-transition: background-color 200ms ease, outline 200ms ease, color 200ms ease, -webkit-box-shadow 200ms ease;
-    transition: background-color 200ms ease, outline 200ms ease, color 200ms ease, -webkit-box-shadow 200ms ease;
     transition: background-color 200ms ease, outline 200ms ease, color 200ms ease, box-shadow 200ms ease;
-    transition: background-color 200ms ease, outline 200ms ease, color 200ms ease, box-shadow 200ms ease, -webkit-box-shadow 200ms ease;
     border-radius: 12px;
     outline: none;
     background-color: #fff;
     color: #0d0c22;
-    -webkit-appearance: none;
-    -moz-appearance: none;
     appearance: none;
-    -webkit-font-feature-settings: 'ss01';
     font-feature-settings: 'ss01';
 }
 
